fix scrollbar

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -149,6 +149,10 @@ pre {
     }
 }
 
+pre.line-pre {
+  overflow-x: auto;
+}
+
 .sidebar
 {
     float: right;
